[BOOT-910 - Ajustes nos testes unitarios do controller]