@@ -1,11 +1,10 @@
 package com.ciandt.summit.bootcamp2022.controllers;
 
-import com.ciandt.summit.bootcamp2022.controllers.exception.ResourceExceptionHandler;
 import com.ciandt.summit.bootcamp2022.dto.ArtistDto;
 import com.ciandt.summit.bootcamp2022.dto.MusicDto;
-import com.ciandt.summit.bootcamp2022.services.MusicService;
+import com.ciandt.summit.bootcamp2022.services.exceptions.ListIsEmptyException;
 import com.ciandt.summit.bootcamp2022.services.exceptions.NameLenghtException;
-import org.junit.jupiter.api.Assertions;
+import com.ciandt.summit.bootcamp2022.services.impl.MusicServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.MockitoAnnotations;
@@ -13,19 +12,18 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.ResultActions;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
+import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
+import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
-import static org.hamcrest.Matchers.*;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.is;
 import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
@@ -37,10 +35,10 @@ public class MusicControllerTest {
     private MockMvc mockMvc;
 
     @MockBean
-    private MusicService service;
+    private MusicServiceImpl service;
 
     @Autowired
-    private MusicController musicController;
+    private MusicController controller;
 
     private ArtistDto artist1;
     private MusicDto music1;
@@ -52,7 +50,6 @@ public class MusicControllerTest {
     @BeforeEach
     void setUp() throws Exception {
         MockitoAnnotations.openMocks(this);
-        this.mockMvc = MockMvcBuilders.standaloneSetup(musicController).setControllerAdvice(new ResourceExceptionHandler()).build();
 
         artist1 = new ArtistDto("1", "Post Malone");
         music1 = new MusicDto("1", "Take What You Want", artist1);
@@ -66,115 +63,63 @@ public class MusicControllerTest {
 
     @Test
     public void findByNameOrMusicShouldReturnListMusicsWhenExistFilter() throws Exception {
-        var musics = List.of(music1, music2, music3);
-        var filtro = "You";
+        List<MusicDto> musics = new ArrayList<>(Arrays.asList(music1, music2, music3));
+        var filter = "You";
 
-        when(service.findByMusicOrArtist(filtro)).thenReturn(musics);
+        when(service.findByMusicOrArtist(filter)).thenReturn(musics);
 
-        var response = musicController.findByNameOrMusic(filtro);
-
-        assertNotNull(response);
-        assertEquals(HttpStatus.OK,response.getStatusCode());
-        assertEquals(musics.size(),response.getBody().size());
-        assertEquals(ResponseEntity.class, response.getClass());
-        assertEquals(musics.get(0).getId(),response.getBody().get(0).getId());
-
+        mockMvc.perform(MockMvcRequestBuilders
+                        .get("/api/musicas")
+                        .param("filtro", filter)
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(MockMvcResultMatchers.jsonPath("$", hasSize(3)))
+                .andExpect(jsonPath("$").isNotEmpty());
     }
-
-//    @Test
-//    public void findByNameOrMusicShouldReturnListMusicsWhenExistFilter() throws Exception {
-//        var musics = List.of(music1, music2, music3);
-//        var filtro = "You";
-//
-//        when(service.findByMusicOrArtist(filtro)).thenReturn(musics);
-//
-//        ResultActions result =
-//                mockMvc.perform(get("/api/musicas")
-//                        .param("filter", filtro)
-//                        .accept(MediaType.APPLICATION_JSON));
-//
-//        result.andExpect(status().isOk());
-//        result.andExpect(jsonPath("$").isNotEmpty());
-//        result.andExpect(jsonPath("$", hasSize(3)));
-//    }
 
     @Test
     public void findByNameOrMusicShouldReturnListMusicsWhenExistFilterIgnoreCase() throws Exception {
         var musics = List.of(music3);
-        var filtro = "kAtY";
+        var filter = "kAtY";
 
-        when(service.findByMusicOrArtist(filtro)).thenReturn(musics);
+        when(service.findByMusicOrArtist(filter)).thenReturn(musics);
 
-        var response = musicController.findByNameOrMusic(filtro);
-
-        assertNotNull(response);
-        assertEquals(HttpStatus.OK,response.getStatusCode());
-        assertEquals(musics.size(),response.getBody().size());
-        assertEquals(ResponseEntity.class, response.getClass());
-
+        mockMvc.perform(MockMvcRequestBuilders
+                        .get("/api/musicas")
+                        .param("filtro", filter)
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(MockMvcResultMatchers.jsonPath("$", hasSize(1)))
+                .andExpect(jsonPath("$").isNotEmpty());
     }
-
-//    @Test
-//    public void findByNameOrMusicShouldReturnListMusicsWhenExistFilterIgnoreCase() throws Exception {
-//        var musics = List.of(music3);
-//        var filtro = "kAtY";
-//
-//        when(service.findByMusicOrArtist(filtro)).thenReturn(musics);
-//
-//        ResultActions result =
-//                mockMvc.perform(get("/api/musicas")
-//                        .param("filter", filtro)
-//                        .accept(MediaType.APPLICATION_JSON));
-//
-//        result.andExpect(status().isOk());
-//        result.andExpect(jsonPath("$").isNotEmpty());
-//        result.andExpect(jsonPath("$", hasSize(1)));
-//    }
 
     @Test
     public void findByNameOrMusicShouldReturnErrorWhenFilterIsLessThanTwoCharacters() throws Exception {
-        var filtro = "x";
+        var filter = "x";
 
-        when(service.findByMusicOrArtist(filtro)).thenThrow(new NameLenghtException());
+        when(service.findByMusicOrArtist(filter)).thenThrow(new NameLenghtException());
 
-        var response = musicController.findByNameOrMusic(filtro);
-
-        assertEquals(HttpStatus.BAD_REQUEST,response.getStatusCode());
-
-        System.out.println(">>>>>>>>>>>>>>>> " + response);
-
-
+        mockMvc.perform(MockMvcRequestBuilders
+                        .get("/api/musicas")
+                        .param("filtro", filter)
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isBadRequest())
+                .andExpect(jsonPath("$").isNotEmpty())
+                .andExpect(jsonPath("$.status", is(400)))
+                .andExpect(jsonPath("$.error", is("The name should have more than 2 characters")))
+                .andExpect(jsonPath("$.path", is("/api/musicas")));
     }
-
-//    @Test
-//    public void findByNameOrMusicShouldReturnErrorWhenFilterIsLessThanTwoCharacters() throws Exception {
-//        var filtro = "x";
-//
-//        when(service.findByMusicOrArtist(filtro)).thenThrow(new NameLenghtException());
-//
-//        ResultActions result =
-//                mockMvc.perform(get("/api/musicas")
-//                        .param("filter", filtro)
-//                        .accept(MediaType.APPLICATION_JSON));
-//
-//        result.andExpect(status().isBadRequest());
-//        result.andExpect(jsonPath("$").isNotEmpty());
-//        result.andExpect(jsonPath("$.status", is(400)));
-//        result.andExpect(jsonPath("$.error", hasItem("The name should have more than 2 characters")));
-//    }
 
     @Test
     public void findByNameOrMusicShouldReturnNoContentWhenListIsEmpty() throws Exception {
-        var filtro = "3xw4d3";
+        var filter = "3xw4d3";
 
-        when(service.findByMusicOrArtist(filtro)).thenThrow(new NameLenghtException());
+        when(service.findByMusicOrArtist(filter)).thenThrow(new ListIsEmptyException());
 
-        ResultActions result =
-                mockMvc.perform(get("/api/musicas")
-                        .param("filter", filtro)
-                        .accept(MediaType.APPLICATION_JSON));
-
-        result.andExpect(status().isNoContent());
+        mockMvc.perform(MockMvcRequestBuilders
+                        .get("/api/musicas")
+                        .param("filtro", filter)
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isNoContent());
     }
-
 }
